deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reef-web
spec:
  selector:
    app: reef-web
  ports:
    - port: 3000
      targetPort: 3000
